Fix warnings, cleanup build.gradle, add gradle.properties